# etherscan-mcp-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
src/: __init__.py  server.py
src/tools/: accounts.py  blocks.py  contracts.py  gas.py  logs.py  rpc.py  stats.py  tokens.py  transactions.py  utils.py
